# compro-env

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json  settings.local.json
.claude/agents/: implementer-prompt.md  test-writer-prompt.md
.claude/commands/: spec-do.md  spec-review.md  spec-update.md
.claude/hooks/: post-edit.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/domain/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config_impl.rs  lib.rs
crates/infrastructure/src/online_judge_impl/: atcoder.rs
crates/infrastructure/src/repository_impl/: contest_repository_impl.rs  mod.rs  session_repository_impl.rs  solution_repository_impl.rs
crates/infrastructure/src/shell/: commands.rs  mod.rs
crates/interfaces/: Cargo.toml
crates/usecases/: Cargo.toml
docs/: IDEA.md  PLAN.md  spec.md  userscript.md
docs/commands/: init.md  login.md  logout.md  new.md  solution.md  submit.md  test.md  whoami.md
ref-repos/: ac  giming
reports/: nippo-2026-04-04.md  nippo-2026-04-05.md
src/: main.rs
tasks/doing/: TASK-013-input-format-phase1.md  TASK-015-grid-input.md  TASK-018-query-type-input.md  TASK-023-fixed-size-arrays.md  TASK-024-iteration-vars-ops.md  TASK-027-rm-query-line.md  TASK-029-grid-row-no-space.md
tasks/done/: TASK-001-skeleton.md  TASK-002-login.md  TASK-003-whoami.md  TASK-004-logout.md  TASK-005-init.md  TASK-006-init-refactor.md  TASK-007-rust2024-edition.md  TASK-008-test.md  TASK-009-solution-add.md  TASK-010-submit.md  TASK-011-input-format-parse.md  TASK-012-is-size-field.md  TASK-013-input-format-phase1.md  TASK-015-grid-input.md  TASK-016-non-numeric-subscript-scalar.md  TASK-017-submit-skip-failed-test.md  TASK-019-query-subblock-codegen.md  TASK-020-query-body-codegen.md  (+10 more)
userscripts/: atcoder-submit-helper.user.js
(+28 files in other folders)
