[package]
name = "ce"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ce"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "crates/domain",
    "crates/usecases",
    "crates/interfaces",
    "crates/infrastructure",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
domain = { path = "crates/domain" }
usecases = { path = "crates/usecases" }
interfaces = { path = "crates/interfaces" }
infrastructure = { path = "crates/infrastructure" }

[dependencies]
infrastructure = { workspace = true }
anyhow = { workspace = true }
