[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
usecases = { workspace = true }
interfaces = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
